--- a/index.html
+++ b/index.html
@@ -2876,7 +2876,7 @@
         </section>
         <section id="errors">
             <div id="6-1" class="content">
-                <p id="title">에러</p>
+                <p id="title">오류</p>
                 <p id="description">Lorem ipsum dolor sit amet...</p>
             </div>
         </section>
