--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/base.css">
     <link rel="stylesheet" href="style/sideBar.css">
+    <link rel="stylesheet" href="style/mobile.css">
+    <link rel="stylesheet" href="style/dark.css">
     <link rel="stylesheet" href="style/toast.css">
     <title>KakaotalkBot Docs</title>
 </head>
