--- a/503.html
+++ b/503.html
@@ -6,14 +6,14 @@
     <script src="https://kkotbot-docs.kro.kr/script/jquery.js"></script>
     <script src="https://kkotbot-docs.kro.kr/script/dark.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="https://kkotbot-docs.kro.kr/img/icon.ico">
-    <link rel="stylesheet" href="https://kkotbot-docs.kro.kr/style/notfound.css">
-    <title>404에러</title>
+    <link rel="stylesheet" href="https://kkotbot-docs.kro.kr/style/forbidden.css">
+    <title>503에러</title>
 </head>
 <body>
     <div>
-        <img id="NF" src="https://kkotbot-docs.kro.kr/img/NotFound.png">
-        <p id="title">여기가 어딘가요?</p>
-        <p id="sT">이곳은 존재하지 않은 공간입니다. 막다른 길로 오셨나 보군요.</p>
+        <img id="FBD" src="https://kkotbot-docs.kro.kr/img/Forbidden.png">
+        <p id="title">지금은 안돼요!</p>
+        <p id="sT">현재 서버를 사용할 수 없어요. 다음에 다시 방문해주세요!</p>
     </div>
 </body>
 </html>
