--- a/400.html
+++ b/400.html
@@ -6,14 +6,14 @@
     <script src="https://kkotbot-docs.kro.kr/script/jquery.js"></script>
     <script src="https://kkotbot-docs.kro.kr/script/dark.js"></script>
     <link rel="shortcut icon" type="image/x-icon" href="https://kkotbot-docs.kro.kr/img/icon.ico">
-    <link rel="stylesheet" href="https://kkotbot-docs.kro.kr/style/notfound.css">
-    <title>404에러</title>
+    <link rel="stylesheet" href="https://kkotbot-docs.kro.kr/style/badrequest.css">
+    <title>400에러</title>
 </head>
 <body>
     <div>
-        <img id="NF" src="https://kkotbot-docs.kro.kr/img/NotFound.png">
-        <p id="title">여기가 어딘가요?</p>
-        <p id="sT">이곳은 존재하지 않은 공간입니다. 막다른 길로 오셨나 보군요.</p>
+        <img id="BR" src="https://kkotbot-docs.kro.kr/img/BadRequest.png">
+        <p id="title">뭐라고 하셨는지...</p>
+        <p id="sT">클라이언트 오류가 발생해 어떻게 해야할지 모르겠어요.</p>
     </div>
 </body>
 </html>
