--- a/index.html
+++ b/index.html
@@ -2884,5 +2884,10 @@
             </div>
         </section>
     </section>
+    <script type="text/javascript">
+        if($("section#body").width == 0){
+            location.reload();
+        }
+    </script>
 </body>
 </html>
