--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <script type="text/javascript" src="script/search.js"></script>
     <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style/base.css">
     <link rel="stylesheet" href="style/sideBar.css">
+    <link rel="stylesheet" href="style/base.css">
+    <link rel="stylesheet" href="style/tablet.css">
     <link rel="stylesheet" href="style/mobile.css">
     <link rel="stylesheet" href="style/dark.css">
     <link rel="stylesheet" href="style/toast.css">
