--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="script/toast.js"></script>
     <script type="text/javascript" src="script/inko.js"></script>
     <script type="text/javascript" src="script/search.js"></script>
+    <script type="text/javascript" src="script/copy.js"></script>
     <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/sideBar.css">
