--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/sideBar.css">
     <link rel="stylesheet" href="style/base.css">
-    <link rel="stylesheet" href="style/tablet.css">
+    <!--link rel="stylesheet" href="style/tablet.css"-->
     <link rel="stylesheet" href="style/mobile.css">
     <link rel="stylesheet" href="style/dark.css">
     <link rel="stylesheet" href="style/toast.css">
