--- a/503.html
+++ b/503.html
@@ -12,7 +12,7 @@
 <body>
     <div>
         <img id="FBD" src="https://kkotbot-docs.kro.kr/img/Forbidden.png">
-        <p id="title">지금은 안돼요!</p>
+        <p class="title">지금은 안돼요!</p>
         <p id="sT">현재 서버를 사용할 수 없어요. 다음에 다시 방문해주세요!</p>
     </div>
 </body>
