--- a/400.html
+++ b/400.html
@@ -12,7 +12,7 @@
 <body>
     <div>
         <img id="BR" src="https://kkotbot-docs.kro.kr/img/BadRequest.png">
-        <p id="title">뭐라고 하셨는지...</p>
+        <p class="title">뭐라고 하셨는지...</p>
         <p id="sT">클라이언트 오류가 발생해 어떻게 해야할지 모르겠어요.</p>
     </div>
 </body>
