--- a/Error/404/index.html
+++ b/Error/404/index.html
@@ -12,7 +12,7 @@
 <body>
     <div>
         <img id="NF" src="https://kkotbot-docs.kro.kr/img/NotFound.png">
-        <p id="title">여기가 어딘가요?</p>
+        <p class="title">여기가 어딘가요?</p>
         <p id="sT">이곳은 존재하지 않은 공간입니다. 막다른 길로 오셨나 보군요.</p>
     </div>
 </body>
