--- a/index.html
+++ b/index.html
@@ -3190,14 +3190,14 @@
         <section id="appendix">
             <div id="99-1" class="content">
                 <p class="title">참고자료</p>
-                <p class="a" class="https://deviolet.tistory.com/entry/%EB%A9%94%EC%8B%A0%EC%A0%80%EB%B4%87-%EA%B0%80%EC%9D%B4%EB%93%9C">메신저봇 가이드</p><br>
-                <p class="a" class="https://developer.mozilla.org/ko/docs/Web/JavaScript/Guide/Expressions_and_Operators">표현식과 연산자 - JavaScript | MDN</p><br>
-                <p class="a" class="https://developer.mozilla.org/ko/docs/Web/JavaScript/Guide/Values,_variables,_and_literals">문법과 자료형 - JavaScript | MDN</p><br>
-                <p class="a" class="https://developer.mozilla.org/ko/docs/Web/JavaScript/Guide/Loops_and_iteration">루프와 반복 - JavaScript | MDN</p><br>
-                <p class="a" class="https://developer.mozilla.org/ko/docs/Web/JavaScript/Guide/%EC%A0%95%EA%B7%9C%EC%8B%9D">정규 표현식 - JavaScript | MDN</p><br>
-                <p class="a" class="https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects">표준 내장 객체 - JavaScript | MDN</p><br>
-                <p class="a" class="https://m.blog.naver.com/hadaboni80/221711302790">[JS] 자바스크립트 스위치문 - Switch, case, default, break</p><br>
-                <p class="a" class="https://beomy.tistory.com/21">[자바스크립트] 정규식(Regular Expressions)</p>
+                <p class="a" id="https://deviolet.tistory.com/entry/%EB%A9%94%EC%8B%A0%EC%A0%80%EB%B4%87-%EA%B0%80%EC%9D%B4%EB%93%9C">메신저봇 가이드</p><br>
+                <p class="a" id="https://developer.mozilla.org/ko/docs/Web/JavaScript/Guide/Expressions_and_Operators">표현식과 연산자 - JavaScript | MDN</p><br>
+                <p class="a" id="https://developer.mozilla.org/ko/docs/Web/JavaScript/Guide/Values,_variables,_and_literals">문법과 자료형 - JavaScript | MDN</p><br>
+                <p class="a" id="https://developer.mozilla.org/ko/docs/Web/JavaScript/Guide/Loops_and_iteration">루프와 반복 - JavaScript | MDN</p><br>
+                <p class="a" id="https://developer.mozilla.org/ko/docs/Web/JavaScript/Guide/%EC%A0%95%EA%B7%9C%EC%8B%9D">정규 표현식 - JavaScript | MDN</p><br>
+                <p class="a" id="https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects">표준 내장 객체 - JavaScript | MDN</p><br>
+                <p class="a" id="https://m.blog.naver.com/hadaboni80/221711302790">[JS] 자바스크립트 스위치문 - Switch, case, default, break</p><br>
+                <p class="a" id="https://beomy.tistory.com/21">[자바스크립트] 정규식(Regular Expressions)</p>
             </div>
             <div id="99-2" class="content">
                 <p class="title">도움주신 분들</p>
@@ -3205,7 +3205,7 @@
                 <p id="thank_you" class="Violet_XF님"><strong>Violet XF</strong> 님</p><br>
                 <p id="thank_you" class="도미님"><strong>도미</strong> 님</p><br>
                 <p id="thank_you" class="JusticeHui님"><strong>JusticeHui</strong> 님</p><br>
-                <p id="thank_you" class="franknoh님"><strong>franknoh</strong> 님 <strong>★</strong></p>
+                <p id="thank_you" class="franknoh님"><strong>franknoh</strong> 님 <strong>★★</strong></p>
             </div>
         </section>
     </section>
