--- a/index.html
+++ b/index.html
@@ -3209,6 +3209,30 @@
             </div>
         </section>
     </section>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-analytics.js"></script>
+
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyC2uqV1aTqbeV8Ns10-9UeTBV5UWBlQ1AI",
+        authDomain: "kakaotalkbot-docs.firebaseapp.com",
+        databaseURL: "https://kakaotalkbot-docs.firebaseio.com",
+        projectId: "kakaotalkbot-docs",
+        storageBucket: "kakaotalkbot-docs.appspot.com",
+        messagingSenderId: "209657729121",
+        appId: "1:209657729121:web:94edd905e7135f9f315a20",
+        measurementId: "G-ET1Y9WY3Y8"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </script>
     <script type="text/javascript">
         if($("section#body").width == 0){
             location.reload();
