--- a/Q&A.html
+++ b/Q&A.html
@@ -70,6 +70,7 @@
       firebase.initializeApp(firebaseConfig);
       firebase.analytics();
       var firestore = firebase.firestore();
+      var postRef = firestore.collection('posts');
     </script>
 </body>
 </html>
