--- a/Q&A.html
+++ b/Q&A.html
@@ -140,12 +140,13 @@
                     console.log(doc.id, " => ", doc.data());
                     items.push(doc.data().title);
                 });
+                let ul = document.createElement('ul');
+                document.getElementById('summary').appendChild(ul);
                 items.slice(0, 20).forEach(function (item) {
                     let li = document.createElement('li');
                     ul.appendChild(li);
                     li.innerHTML += '<a href=\"https://kkotbot-docs.kro.kr/Q&A?id='+doc.id+'\">'+item+'</a>';
                 });
-                document.getElementById('summary').appendChild(document.createElement('ul'));
             });
         }
     </script>
