--- a/Q&A.html
+++ b/Q&A.html
@@ -42,7 +42,7 @@
         <div class="toastjs"></div>
     </div>
     <section id="body">
-        <section id="summary">
+        <section id="summary" style="text-decoration: none;color: black;">
 
         </section>
     </section>
