--- a/Q&A.html
+++ b/Q&A.html
@@ -120,9 +120,6 @@
                 console.error("Error adding document: ", error);
             });
         }
-        
-        if(!firebase.auth().currentUser){
-        }
 
         if (location.href.startsWith('https://kkotbot-docs.kro.kr/Q&A?id=')) {
             postRef.doc(location.href.substring('https://kkotbot-docs.kro.kr/Q&A?id='.length)).get().then(function(doc) {
@@ -154,6 +151,7 @@
                     let li = document.createElement('li');
                     ul.appendChild(li);
                     li.innerHTML += '<a href=\"https://kkotbot-docs.kro.kr/Q&A?id='+item.id+'\">'+item.data.title+'</a>';
+                    $('a[href = https://kkotbot-docs.kro.kr/Q&A?id='+item.id+']').css('float', 'left');
                 });
             });
         }
