--- a/login.html
+++ b/login.html
@@ -40,6 +40,33 @@
             <p class="sml">계정이 없으신가요? <a href="sign_up.html">계정을 만들어보세요!</a></p>
         </section>
     </div>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-firestore.js"></script>
+
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyC2uqV1aTqbeV8Ns10-9UeTBV5UWBlQ1AI",
+        authDomain: "kakaotalkbot-docs.firebaseapp.com",
+        databaseURL: "https://kakaotalkbot-docs.firebaseio.com",
+        projectId: "kakaotalkbot-docs",
+        storageBucket: "kakaotalkbot-docs.appspot.com",
+        messagingSenderId: "209657729121",
+        appId: "1:209657729121:web:94edd905e7135f9f315a20",
+        measurementId: "G-ET1Y9WY3Y8"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/hmac-sha256.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/components/enc-base64-min.js"></script>
     <script src="script/DBLogin.js"></script>
