--- a/login.html
+++ b/login.html
@@ -17,6 +17,15 @@
     <title>로그인</title>
 </head>
 <body>
+    <header>
+        <a href='index.html'><img id="kkotb_rfnc" src="img/docs.png"></a>
+        <div id="wrap">
+            <form action="" autocomplete="off">
+                <input id="search" data-bg="#ff0d86" name="search" type="text" placeholder="검색할 내용을 입력하세요.">
+                <!--<button type="submit"><img id="search" src="img/search.png"></button>--><input id="search_submit" value="Rechercher" type="submit">
+            </form>
+        </div>
+    </header>
     <div id="content">
         <section id="body">
             <h1 class="ttl">Login</h1>
