--- a/sign_up.html
+++ b/sign_up.html
@@ -60,6 +60,6 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/hmac-sha256.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/components/enc-base64-min.js"></script>
-    <script src="script/Login.js"></script>
+    <script src="script/SignUp.js"></script>
 </body>
 </html>
