--- a/sign_up.html
+++ b/sign_up.html
@@ -12,7 +12,7 @@
     <link id="favicon" rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
     <link href="https://fonts.googleapis.com/css?family=Sen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/basic.css">
-    <link rel="stylesheet" href="style/login.css">
+    <link rel="stylesheet" href="style/signup.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
     <title>회원가입</title>
 </head>
