--- a/sign_up.html
+++ b/sign_up.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="style/basic.css">
     <link rel="stylesheet" href="style/signup.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+    <script src="script/upload.js"></script>
     <title>회원가입</title>
 </head>
 <body>
